[package]
name = "rust_quasar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hostname = "0.3.1"
git-version = "0.3.5"
structopt = "0.3"
nix = "0.23.0"
rand = "0.8.4"
libc = "0.2"

[profile.release]
opt-level = 3